<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ync.ch06_energycalculator_spinner.MainActivity">

    <Spinner
        android:id="@+id/spinnerMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:entries="@array/sportMenu"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/chooseHint"
        android:textSize="@dimen/mainSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/showData"
        android:textSize="@dimen/mainSize"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/sportRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:textSize="@dimen/mainSize"
        tools:ignore="MissingConstraints"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/weightHint"
        android:textSize="@dimen/mainSize"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/hourHint"
        android:textSize="@dimen/mainSize"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/userWeight"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/userHours"
        android:layout_width="73dp"
        android:layout_height="46dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btnCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="calc"
        android:text="@string/btnCal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/calResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/sum"
        android:textAlignment="center"
        android:textSize="@dimen/mainSize"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/sweetRemind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calResult"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />
</android.support.constraint.ConstraintLayout>
